api/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: hammadansari/devops-api:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
        - |
          echo "Waiting for Postgres..."
          until pg_isready -h postgres -U postgres; do
          sleep 2
          done
          echo "Starting API..."
          python app.py
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
